--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Food Wala</title>
+    <title>The Food_Wala</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
